--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,11 +6,13 @@
     "form-serialize": "^0.7.2",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
+    "react-dropdown": "^1.3.2",
     "react-modal": "^3.0.0",
     "react-numeric-input": "^2.2.0",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.14",
+    "react-select": "^1.0.0-rc.10",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
     "whatwg-fetch": "^2.0.3"
